# RAG_FOR_HOSPITAL

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  api.py  app.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: annotate_chunks.py  eval_retrieval.py  generate_eval_dataset.py  regenerate_images.py  run_full_evaluation.py
src/: callbacks.py  chat_history.py  config.py  conversation.py  database.py  document_loader.py  embeddings.py  health.py  hybrid_search.py  image_pipeline.py  intent.py  llm.py  logger.py  migrations.py  prompts.py  query_rewriter.py  rag_chain.py  reranker.py  retrieval_eval.py  text_splitter.py  vector_store.py
src/crawlers/: __init__.py  base.py  dailymed.py  generator.py  pubmed.py  synthetic.py
src/evaluation/: __init__.py  dataset.py  metrics.py  runner.py
tests/: conftest.py  test_config.py  test_intent_classification.py  test_query_rewriter.py  test_retrieval_metrics.py
