[project]
name = "rag-for-hospital"
version = "0.1.0"
description = "面向医疗系统的企业级 RAG 问答系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.2.0",
    "langchain-milvus>=0.2.0",
    "pymilvus>=2.5.0",
    "pymupdf>=1.27.0",
    "sentence-transformers>=5.1.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.49.0",
    "streamlit>=1.58.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "opendataloader-pdf>=1.0.0",
    "openai>=1.0.0",
    "flashrank>=0.2.10",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
